# wlmc

./: CMakeLists.txt  CMakePresets.json  justfile
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  control_flow.hpp  main.cpp  observer.cppm  wlmc.cpp
toolchain/: Dockerfile
